// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`supported $create_alias 1`] = `
Object {
  "anonymousId": "180d9a2c070861-0c82a7dd77400b-34736704-16a7f0-180d9a2c0711cbb",
  "context": Object {
    "app": Object {
      "version": "1.35.0",
    },
    "os": Object {
      "name": "Mac OS X",
    },
    "page": Object {
      "host": "localhost:8000",
      "path": "/events",
      "referrer": "http://localhost:8000/authorize_and_redirect/?redirect=http%3A%2F%2Flocalhost%3A8000%2Fproject%2Fsettings",
      "search": "",
      "url": "http://localhost:8000/events",
    },
    "screen": Object {
      "height": 982,
      "width": 1512,
    },
  },
  "libary": Object {
    "name": "posthog-variance-plugin",
    "version": "0.0.0",
  },
  "messageId": "0",
  "previousId": "YiZpN3z6sbgGuZ93bWpAqsfyaQDj1la4us2p3mT41uj",
  "timestamp": "2020-11-26T12:58:58.453Z",
  "type": "alias",
  "userId": "1",
}
`;

exports[`supported $identify 1`] = `
Object {
  "libary": Object {
    "name": "posthog-variance-plugin",
    "version": "0.0.0",
  },
  "messageId": "0",
  "timestamp": "2020-11-26T12:58:58.453Z",
  "traits": Object {
    "email": "guillaume@variance.com",
  },
  "type": "identify",
  "userId": "0",
}
`;

exports[`supported $pageview 1`] = `
Object {
  "anonymousId": "180d9a2c070861-0c82a7dd77400b-34736704-16a7f0-180d9a2c0711cbb",
  "context": Object {
    "app": Object {
      "version": "1.35.0",
    },
    "os": Object {
      "name": "Mac OS X",
    },
    "page": Object {
      "host": "localhost:8000",
      "path": "/home",
      "referrer": "http://localhost:8000/authorize_and_redirect/?redirect=http%3A%2F%2Flocalhost%3A8000%2Fproject%2Fsettings",
      "search": "",
      "url": "http://localhost:8000/home",
    },
    "screen": Object {
      "height": 982,
      "width": 1512,
    },
  },
  "libary": Object {
    "name": "posthog-variance-plugin",
    "version": "0.0.0",
  },
  "messageId": "0",
  "properties": Object {
    "host": "localhost:8000",
    "path": "/home",
    "referrer": "http://localhost:8000/authorize_and_redirect/?redirect=http%3A%2F%2Flocalhost%3A8000%2Fproject%2Fsettings",
    "url": "http://localhost:8000/home",
  },
  "timestamp": "2020-11-26T12:58:58.453Z",
  "type": "page",
  "userId": "YiZpN3z6sbgGuZ93bWpAqsfyaQDj1la4us2p3mT41uj",
}
`;

exports[`supported custom event 1`] = `
Object {
  "anonymousId": "180d9a2c070861-0c82a7dd77400b-34736704-16a7f0-180d9a2c0711cbb",
  "context": Object {
    "os": Object {
      "name": "Mac OS X",
    },
    "page": Object {
      "host": "localhost:8000",
      "path": "/project/apps",
      "referrer": "http://localhost:8000/authorize_and_redirect/?redirect=http%3A%2F%2Flocalhost%3A8000%2Fproject%2Fsettings",
      "search": "",
      "url": "http://localhost:8000/project/apps",
    },
    "screen": Object {
      "height": 982,
      "width": 1512,
    },
  },
  "libary": Object {
    "name": "posthog-variance-plugin",
    "version": "0.0.0",
  },
  "messageId": "0",
  "name": "team has ingested events",
  "properties": Object {
    "distinct_id": "YiZpN3z6sbgGuZ93bWpAqsfyaQDj1la4us2p3mT41uj",
    "is_demo_project": false,
    "token": "phc_r06aTsEyFENJMKoqoJCoPxCtRCQGZFw1njECfKiup7K",
  },
  "timestamp": "2020-11-26T12:58:58.453Z",
  "userId": "YiZpN3z6sbgGuZ93bWpAqsfyaQDj1la4us2p3mT41uj",
}
`;
